@@ -30,4 +30,11 @@
         permission="zope2.View"
         />
 
+    <browser:viewlet
+        name="plone.links.canonical_url"
+        manager="plone.app.layout.viewlets.interfaces.IHtmlHeadLinks"
+        class=".viewlets.CanonicalURL"
+        permission="zope2.View"
+        />
+
 </configure>
