@@ -4,6 +4,12 @@ Changelog
 2.3.6 (unreleased)
 ------------------
 
+- Implement a canonical link relation viewlet to be displayed by
+  IHtmlHeadLinks viewlet manager; this will prevent web indexers from indexing
+  the same object more than once, improving also the way these indexers deal
+  with images and files.
+  [hvelarde]
+
 - Add Dexterity support for the related items viewlet. Backported from master
   branch.
   [pabo]
